<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        tools:context=".RegisterActivity">

        <!-- Registrazione titolo -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrazione"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp"

            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:hint="Nome"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

        <EditText
            android:id="@+id/editTextCognome"
            android:autofillHints=""
            android:padding="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:hint="@string/cognome"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNome" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:entries="@array/sesso_options"
            android:padding="16dp"
            android:hint="@string/genere"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCognome" />

        <DatePicker
            android:id="@+id/datePickerBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:maxHeight="150dp"
            android:datePickerMode="spinner"
            android:hint="@string/data_di_nascita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerGender"/>

        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datePickerBirthDate"  />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            android:hint="Username"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTelefono" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editUsername" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail" />


        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:hint="Conferma Password"
            android:padding="16dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

        <CheckBox
            android:id="@+id/checkBoxTerms"
            android:padding="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/accetto_i_termini_e_le_condizioni"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="320dp"
            android:text="@string/registrati"
            android:textColor="@color/white"
            android:backgroundTint="#18243C"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxTerms"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/textViewSpazio"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonRegister"
            android:text="" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
